--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -24,6 +24,8 @@ Vagrant.configure("2") do |config|
 
   end
 
+  config.vm.boot_timeout = 900
+
   config.vm.provision("root", type: "shell",
                       path: "provision.root.sh",
                       privileged: true)
