--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -6,29 +6,42 @@ load  File.expand_path("DetectOS.rb")  if File.exists?("DetectOS.rb")
 Vagrant.configure("2") do |config|
   config.vm.box = "takahiro-itou/centos7-pbspro"
 
-  config.vm.provider "virtualbox" do |v|
-    v.name   = "vagrant-centos7-pbspro"
-    v.memory = "2048"
+  format_private_name = "node%02d"
+  format_private_ip = "192.168.64.%d"
 
-    v.gui    = false
-    v.customize [
-      "modifyvm",               :id,
-      "--cableconnected1",      "on",
-      "--hwvirtex",             "on",
-      "--nestedpaging",         "on",
-      "--largepages",           "on",
-      "--ioapic",               "on",
-      "--pae",                  "on",
-      "--paravirtprovider",     "kvm",
-    ]
+  (0..1).each  do  |i|
+    ip = format_private_ip % [100 + i]
+    name = format_private_name % [i]
 
+    config.vm.define  name  do  |node|
+      node.vm.hostname = name
+      node.vm.network("private_network", ip: ip,
+                      virtualbox__intnet: "vmnet")
+
+      node.vm.provider "virtualbox" do |v|
+        v.name   = "%s-centos7-pbspro" % name
+        v.memory = "2048"
+
+        v.gui    = false
+        v.customize [
+          "modifyvm",               :id,
+          "--cableconnected1",      "on",
+          "--hwvirtex",             "on",
+          "--nestedpaging",         "on",
+          "--largepages",           "on",
+          "--ioapic",               "on",
+          "--pae",                  "on",
+          "--paravirtprovider",     "kvm",
+        ]
+      end
+
+      node.vm.boot_timeout = 900
+
+      node.vm.provision("root", type: "shell",
+                        path: "provision.root.sh",
+                        privileged: true)
+      node.vm.synced_folder(".", "/vagrant", disabled: true)
+    end
   end
-
-  config.vm.boot_timeout = 900
-
-  config.vm.provision("root", type: "shell",
-                      path: "provision.root.sh",
-                      privileged: true)
-  config.vm.synced_folder(".", "/vagrant", disabled: true)
 
 end
