--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -15,6 +15,10 @@ Vagrant.configure("2") do |config|
 
     config.vm.define  name  do  |node|
       node.vm.hostname = name
+
+      if (i == 0)
+        node.vm.network("private_network", ip: "192.168.33.111")
+      end
       node.vm.network("private_network", ip: ip,
                       virtualbox__intnet: "vmnet")
 
