--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -41,6 +41,10 @@ Vagrant.configure("2") do |config|
 
       node.vm.boot_timeout = 900
 
+      node.vm.provision("file",
+                        source:       "../data/",
+                        destination:  "/tmp")
+
       node.vm.provision("root", type: "shell",
                         path: "provision.root.sh",
                         privileged: true)
