--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -43,7 +43,7 @@ Vagrant.configure("2") do |config|
 
       node.vm.provision("file",
                         source:       "../data/",
-                        destination:  "/tmp")
+                        destination:  "/tmp/")
 
       node.vm.provision("root", type: "shell",
                         path: "provision.root.sh",
