--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -17,6 +17,7 @@ Vagrant.configure("2") do |config|
       node.vm.hostname = name
 
       if (i == 0)
+        node.vm.network(:forwarded_port, guest: 22, host: 21122, id: "ssh")
         node.vm.network("private_network", ip: "192.168.33.111")
       end
       node.vm.network("private_network", ip: ip,
